# unifihome

./: .README.md.swp  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
unifihome/: TODO.md  __init__.py  cli.py  config.ini  constants.py  foo.txt  help.md  unifihome.py
unifihome/model/: systeminfo.py
unifihome/ui/: .title.py.swp  footer.py  main.py  main.py.bak  title.py  unifi.py  widgets.py
unifihome/ui/systeminfo/: __init__.py  backup.py  build.py  misc.py  network.py  page.py
