[tool.poetry]
name = "unifihome"
version = "0.1.1"
description = "Console based application for monitoring and management of at home UNIFI devices"
authors = ["Brent Clements <brent.clements@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
